--- a/salah.html
+++ b/salah.html
@@ -86,3 +86,5 @@
     </footer>
 </body>
 </html>
+<meta name="description" content="هذا هو موقعي الشخصي الذي يعرض أعمالي.">
+<meta name="keywords" content="موقع شخصي, تطوير ويب, HTML, CSS">
